--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -66,7 +66,7 @@ $dark: black;
 .footer-container {
   background-color: var(--background-color);
   color: var(--player-name);
-  border: 1px solid red;
+  // border: 1px solid red;
   width: 100%;
   position: sticky;
   z-index: 100;
