complete player panel

--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -39,10 +39,10 @@ $dark: black;
         color: darkgray;
         text-decoration: underline;
       }
-      &:active {
-        color: black;
-        text-decoration: underline;
-      }
+    }
+    .active {
+      color: black;
+      text-decoration: underline;
     }
   }
   .nav-right {
