--- a/src/components/teamPage/teamPage.scss
+++ b/src/components/teamPage/teamPage.scss
@@ -1,4 +1,4 @@
-.splash-container {
+.team-container {
   //   border: 1px solid red;
   background-color: var(--background-color);
   //   height: 100vh;
@@ -18,7 +18,7 @@
       display: none;
     }
 
-    .splash-header {
+    .team-header {
       font-size: 18px;
       font-weight: 700;
       color: var(--player-name);
@@ -38,66 +38,36 @@
         top: 30%;
       }
     }
-    .rdt_TableCol {
-      /* border: 1px solid red; */
-      padding: 12px !important;
-      font-size: 14px !important;
-      font-weight: bolder;
-      /* justify-content: center; */
-      // background-color: #fafbfc !important;
-      color: #212529 !important;
-    }
-
-    .sc-dmRaPn.nauIv {
-      overflow: scroll;
-      -ms-overflow-style: none;
-      scrollbar-width: none; /* Firefox */
-
-      &::-webkit-scrollbar {
-        display: none;
-      }
-    }
-
-    .rdt_TableCell {
-      /* border: 1px solid black; */
-      font-size: 13px !important;
-      padding: 12px !important;
-      /* justify-content: center; */
-      color: #212529;
-    }
-
-    .sc-evZas.eUeqdG {
-      color: red;
-    }
-    .datatable-container {
+    .team-container {
       padding: 5px;
-    }
-  }
-  .player-details {
-    width: 100%;
-    display: flex;
-    .player-no {
-      height: 70px;
-      width: 30px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 18px;
-      font-weight: 900;
-      background-color: rgb(216, 73, 101);
-      color: #e1e2e3;
-    }
-    .player-two {
-      margin-left: 5px;
-      font-weight: 600;
-      .player-name {
-        font-size: 14px;
-      }
-      .player-position,
-      .player-club,
-      .player-nationality {
-        color: #0055c5;
-        font-size: 12px;
+      // border: 1px solid red;
+      height: 64vh;
+      overflow-y: scroll;
+
+      .tm-container {
+        // border: 1px solid red;
+        padding: 5px;
+        transition: background-color 2s;
+
+        .tm-logo {
+          // border: 2px solid blue;
+          cursor: pointer;
+          .actual-tm {
+            width: 100%;
+            object-fit: cover;
+          }
+        }
+        .tm-name {
+          display: flex;
+          justify-content: center;
+          font-size: 14px;
+          font-weight: 700;
+          color: var(--player-name);
+        }
+        &:hover {
+          background-color: #888;
+          opacity: 0.8;
+        }
       }
     }
   }
