--- a/src/components/teamPage/teamDetails.scss
+++ b/src/components/teamPage/teamDetails.scss
@@ -113,6 +113,10 @@
 
               .player-name {
                 padding: 2px 5px;
+                // border: 1px solid green;
+                width: 100%;
+                height: 24px;
+                overflow-y: hidden;
               }
             }
           }
